k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: localhost   # Minikube의 Ingress를 통해 로컬에서 테스트할 경우 localhost 사용
      http:
        paths:
          - path: /user
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 8081
          - path: /post
            pathType: Prefix
            backend:
              service:
                name: post-service
                port:
                  number: 8082
          - path: /notification
            pathType: Prefix
            backend:
              service:
                name: notification-service
                port:
                  number: 8083
